Implement focus change on mouse release for QGraphicsScene

* src/gui/graphicsview/qgraphicsscene[_p.h|.cpp]: Ignore focus in event when
  scene's FocusChangeMethod is set to QGS::FocusChangesOnMouseRelease.
  Instead propagate (or clear) focus on mouse release.

  Fixes QTBUG-16343: QGraphicsView doesn't support focus change on mouse
  release.